# larun

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .railway-trigger  .railwayignore  CLAUDE.md  COLAB_TRAINING.md  CONTRIBUTING.md  DEPLOYMENT_FIX.md  DEPLOY_NOW.md  DEVELOPMENT_PLAN.md  Dockerfile  IMPLEMENTATION_PLAN.md  INSTALL.md  LICENSE  MVP_IMPLEMENTATION_PLAN.md  PARALLEL_IMPLEMENTATION_PLAN.md  README.md  SKILLS_ROADMAP.md  VISION.md  api-minimal.py  api.py  cloud_endpoints.py  dashboard.html  demo.py  docker-compose.yml  install.ps1  install.sh  larun.py  larun_chat.py  larun_pipeline.py  main.py  pyproject.toml  railway.json  render.yaml  requirements-api.txt  requirements-dev.txt  requirements-railway.txt  requirements.txt  run_pipeline.py  (+18 more)
.agent/workflows/: coordination.md
.coordination/: FILE_LOCKS.md  HANDOFF_NOTES.md  TASK_LOG.md  WORK_ORDERS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  deploy-pages.yml  deploy-production.yml  deploy-staging.yml  model-validation.yml  pr-automation.yml  pylint.yml  release.yml  security.yml  train-models.yml  version-bump.yml
addons/: codegen.py
assets/: larun-logo-white.b64  larun-logo.b64
config/: config.yaml  training_config.yaml  user_config.yaml
content/blog/: varnet-inspires-larun.md
data/expanded/: all_exoplanets.csv
data/real_exoplanets/: collection_metadata.json  nasa_planet_parameters.json  real_data_cache.npz
distributed/: train_distributed.py
docker/: Dockerfile.api  Dockerfile.web  docker-compose.prod.yml  docker-compose.yml
docs/: ANTIGRAVITY.md  ASTRODATA_STEM_PLAN.md  CLAUDE.md  FEDERATED_ARCHITECTURE.md  FRAMEWORK_ARCHITECTURE.md  QUICKSTART.md  SELF_DEVELOPMENT_PLAN.md  TRAINING_GUIDE.md  VALIDATION.md
docs/coordination-templates/: MVP_INTERFACES.md  MVP_STATUS.md
docs/integrations/: GAIA_INTEGRATION.md  MAST_INTEGRATION.md
docs/research/: EXOPLANET_DETECTION.md  GALAXY_CLASSIFICATION.md  IMAGE_PROCESSING.md  NASA_DATA_SOURCES.md  SPECTROSCOPY.md  STELLAR_PHYSICS.md  TINYML_OPTIMIZATION.md
docs/skills/: SKILL_DEVELOPMENT.md
infrastructure/: .env.example
infrastructure/scripts/: deploy.sh  setup-env.sh
larun/: __init__.py
larun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
larun/api/: __init__.py  main.py
larun/api/routes/: __init__.py  (+5 more)
larun/catalogs/: __init__.py
larun/db/: __init__.py
larun/discovery/: __init__.py  engine.py  leaderboard.py  report.py  verification.py
larun/models/: __init__.py  anomaly.py  base.py  deblend.py  federation.py  periodogram.py  vardet.py
larun/orchestration/: __init__.py  claude_router.py  report_generator.py
larun/pipelines/: __init__.py  base.py  cross_match.py  kepler.py  neowise.py  tess.py  varwise.py
models/: MODEL_REGISTRY.json  registry.json
models/production/: exoplanet_v3.0.tflite  larun_model.h5  larun_model.tflite  larun_model_int8.tflite  model_metadata.json  models_metadata_v3.json  training_data.npz  vstar_v1.0.tflite
models/trained/: EXOPLANET-001_nasa_weights.npz  EXOPLANET-001_real_weights.npz  EXOPLANET-001_weights.npz  FLARE-001_weights.npz  GALAXY-001_weights.npz  MICROLENS-001_weights.npz  MULTIVIEW-EXOPLANET_weights.npz  SPECTYPE-001_weights.npz  SUPERNOVA-001_weights.npz  VSTAR-001_weights.npz  feature_training_results.json  multiview_training_history.json  nasa_training_results.json  real_training_results.json  simplified_training_results.json  training_summary.json
nodes/: registry.yaml
nodes/asteroseismo/: manifest.yaml
nodes/exoplanet/: manifest.yaml
nodes/flare/: manifest.yaml
nodes/galaxy/: manifest.yaml
nodes/microlensing/: manifest.yaml
nodes/spectral_type/: manifest.yaml
nodes/supernova/: manifest.yaml
nodes/trainer/: manifest.yaml
nodes/variable_star/: manifest.yaml
notebooks/: README.md  larun_colab_training.ipynb  larun_continuous_training.ipynb  larun_kaggle_training.ipynb  larun_lightning_training.ipynb  larun_paperspace_training.ipynb
output/: astro_tinyml_weights.h  detections_20260130_153721.csv  detections_20260130_154055.csv  detections_20260130_154645.csv  model_weights.json  report_20260130_153652.json  report_20260130_153710.json  report_20260130_153721.html  report_20260130_153721.json  report_20260130_154055.html  report_20260130_154055.json  report_20260130_154645.html  report_20260130_154645.json
scripts/: __init__.py  bundle_models.py  fetch_training_data.py  generate_changelog.py  publish_models.py  train_pipeline.py  validate_models.py
skills/: periodogram_skills.yaml  skills.yaml
skills/addons/: codegen.yaml
src/: __init__.py  augmentation.py
src/api/: __init__.py  config.py  dependencies.py  main.py
src/calibration/: calibrator.py
src/cli/: __init__.py  node_commands.py
src/data/: __init__.py  automated_trainer.py
src/detection/: __init__.py  bls_engine.py  detector.py  models.py  phase_folder.py  service.py
src/detector/: detector.py
src/federated/: __init__.py  orchestrator.py  protocol.py  registry.py
src/integrations/: __init__.py  gaia.py
src/model/: __init__.py  data_generators.py  multiview_exoplanet.py  numpy_cnn.py  pipeline_framework.py  specialized_models.py  spectral_cnn.py  train_all_models.py  train_multiview.py  trainer.py  visual_guide.py
src/models/: __init__.py  binary_discriminator.py  habitability_assessor.py  stellar_classifier.py
src/nodes/: __init__.py  aggregator.py  base.py  loader.py  registry.py
src/pipeline/: cli.py  nasa_pipeline.py
src/reporter/: report_generator.py
src/skills/: __init__.py  figures.py  fpp.py  gaia.py  multiplanet.py  periodogram.py  planet.py  stellar.py  transit_fit.py  ttv.py  vetting.py
supabase/migrations/: 001_initial_schema.sql  002_admin_subscription_gate.sql
tests/: test_augmentation.py  test_bls.py  test_federated.py  test_model_pipeline.py  test_periodogram.py  test_planet.py  test_stellar.py  test_ttv.py
tests/test_api/: __init__.py
training/: train_discovery_models.py
web/: .env.example  package-lock.json  package.json
(+331 files in other folders)
